# AI-Personal-chef

./: README.md
uploadfile/: ASSET-NOTICE.md  langgraph.json  pyproject.toml
uploadfile/app/: main.py
uploadfile/app/agent_demo/: personal_chief.py  read_history.py  session_history.py
uploadfile/app/api/v1/: chat.py
uploadfile/frontend/: index.html  package-lock.json  package.json  vite.config.mjs
uploadfile/frontend/src/: App.jsx  styles.css
uploadfile/frontend/src/api/: chat.js  client.js  oss.js
uploadfile/frontend/src/components/: ConfirmDialog.jsx
uploadfile/frontend/src/components/chat/: ChatComposer.jsx  ChatHeader.jsx  EntryView.jsx  EntryView.jsx.bak  ImagePreview.jsx  MessageItem.jsx  MessageList.jsx
uploadfile/frontend/src/components/sidebar/: ConversationItem.jsx  ConversationSidebar.jsx
uploadfile/frontend/src/hooks/: useChatWorkspace.js  useConversationStore.js  useImageUpload.js
uploadfile/frontend/src/utils/: image.js  storage.js  thread.js  uuid.js
uploadfile/frontend/tests/: integration.test.mjs
