[project]
name = "pythoncode"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.2.0",
    "alibabacloud-oss-v2>=1.3.2",
    "fastapi>=0.139.1",
    "jupyter>=1.1.1",
    "langchain>=1.3.13",
    "langchain-deepseek>=1.1.0",
    "langchain-tavily>=0.2.18",
    "langgraph-checkpoint>=4.1.1",
    "langgraph-checkpoint-mysql>=3.0.0",
    "langgraph-cli[inmem]>=0.4.31",
    "openai>=2.45.0",
    "pymysql>=1.2.0",
    "python-dotenv>=1.2.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
